gccida/g0/expand_increment
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_increment/src/expr.c:9438:1: error: unknown type name 'optab_0'; did you mean 'optab'?
optab_0 v5; // rax 
^~~~~~~
optab
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_increment/src/optabs.h:48:5: note: 'optab' declared here
} * optab;
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_increment/src/expr.c:9440:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code v7; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_increment/src/expr.c:9443:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_increment/src/expr.c:9453:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *newexp; // [rsp+40h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_increment/src/expr.c:9522:4: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
&& insn_data_0[icode].operand->predicate( op0, mode) 
   ^~~~~~~~~~~
   insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_increment/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_increment/src/expr.c:9522:41: error: called object type '<dependent type>' is not a function or function pointer
&& insn_data_0[icode].operand->predicate( op0, mode) 
                                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_increment/src/expr.c:9523:52: error: use of undeclared identifier 'machine_mode'
&& insn_data_0[icode].operand[1].predicate( op0, ( machine_mode)mode) 
                                                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_increment/src/expr.c:9523:4: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
&& insn_data_0[icode].operand[1].predicate( op0, ( machine_mode)mode) 
   ^~~~~~~~~~~
   insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_increment/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_increment/src/expr.c:9524:52: error: use of undeclared identifier 'machine_mode'
&& insn_data_0[icode].operand[2].predicate( op1, ( machine_mode)mode) ) 
                                                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_increment/src/expr.c:9524:4: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
&& insn_data_0[icode].operand[2].predicate( op1, ( machine_mode)mode) ) 
   ^~~~~~~~~~~
   insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_increment/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_increment/src/expr.c:9553:4: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
&& insn_data_0[icodea].operand->predicate( op0, mode) 
   ^~~~~~~~~~~
   insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_increment/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_increment/src/expr.c:9553:42: error: called object type '<dependent type>' is not a function or function pointer
&& insn_data_0[icodea].operand->predicate( op0, mode) 
                                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_increment/src/expr.c:9554:53: error: use of undeclared identifier 'machine_mode'
&& insn_data_0[icodea].operand[1].predicate( op0, ( machine_mode)mode) ) 
                                                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_increment/src/expr.c:9554:4: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
&& insn_data_0[icodea].operand[1].predicate( op0, ( machine_mode)mode) ) 
   ^~~~~~~~~~~
   insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_increment/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_increment/src/expr.c:9556:56: error: use of undeclared identifier 'machine_mode'
if ( !insn_data_0[icodea].operand[2].predicate( op1, ( machine_mode)mode) ) 
                                                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_increment/src/expr.c:9556:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
if ( !insn_data_0[icodea].operand[2].predicate( op1, ( machine_mode)mode) ) 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_increment/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_increment/src/expr.c:9557:20: error: use of undeclared identifier 'machine_mode'
op1 = force_reg( ( machine_mode)mode, op1); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_increment/src/expr.c:9558:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
v10 = insn_data_0[icodea].genfun( op0, op0, op1); 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_increment/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_increment/src/expr.c:9558:33: error: called object type '<dependent type>' is not a function or function pointer
v10 = insn_data_0[icodea].genfun( op0, op0, op1); 
                                ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_increment/src/obj/expr.o] Error 1
